[package]
name = "ggj22-kiwi"
authors = ["KÄrlisS", "Rollick"]
license = "CC-BY-NC-SA-4.0"
version = "0.1.0"
edition = "2021"
categories = ["games"]
readme = "README.md"

[dependencies]
crossterm="0.20.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
clap = {version = "3.0", default-features=false, features = ["std", "suggestions"]}
